# mechanistic-interpretability

./: .env.example  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  experiment_request.md  validation_request.md
.github/workflows/: ci.yml  docs.yml
ROADMAP/: index.html
configs/: default.yaml
data/prompts/: README.md  ambiguous_polysemantic.txt  clean_corrupted.jsonl  factual.jsonl  openwebtext_sample.jsonl
data/steering/: helpfulness_qwen_2.5_0.5b_l8.safetensors  helpfulness_qwen_2.5_0.5b_l8.safetensors.json  refusal_qwen_2.5_1.5b_l10.safetensors  refusal_qwen_2.5_1.5b_l10.safetensors.json  sentiment_gpt2_medium_l8.safetensors  sentiment_gpt2_medium_l8.safetensors.json
docs/: ROADMAP.md  getting-started.md  index.md  publishing.md  wave-6-integration.md
docs/investigations/: feature_splitting.md  gpt2_factual_recall.md  index.md  ioi_canonical_reproduction.md  refusal_audit.md  refusal_audit_v2.md  sae_at_scale.md  sae_replication_crisis.md
docs/notebooks/: index.md
docs/publications/: abliteration_robustness.md  index.md  launch_announcement.md  lesswrong_post.md
docs/publications/sae_replication_artifacts/: README.md  metrics.json  paper.md  thread.md
docs/reference/: cli.md  cockpit.md  families.md
docs/release-notes/: v0.1.0-preview.md
examples/: activation_capture.yaml  transformerlens_smoke.yaml
experiments/: acdc_edge.yaml  acdc_edge_ioi.yaml  acdc_lite.yaml  acdc_lite_ioi.yaml  attribution_patching.yaml  caa_steering.yaml  caa_steering_gemma2_2b.yaml  caa_steering_llama32_1b.yaml  caa_steering_phi3_mini.yaml  caa_steering_qwen25_0_5b.yaml  caa_steering_qwen25_1_5b.yaml  caa_steering_qwen25_3b.yaml  caa_steering_qwen2_0_5b.yaml  caa_steering_stablelm_3b.yaml  causal_scrubbing.yaml  causal_scrubbing_factual_recall.yaml  causal_scrubbing_refusal_gemma2_2b.yaml  causal_scrubbing_refusal_llama32_1b.yaml  causal_scrubbing_refusal_phi3_mini.yaml  causal_scrubbing_refusal_qwen.yaml  causal_scrubbing_refusal_qwen25_0_5b.yaml  causal_scrubbing_refusal_qwen25_1_5b.yaml  causal_scrubbing_refusal_qwen25_3b.yaml  causal_scrubbing_refusal_qwen2_0_5b.yaml  causal_scrubbing_refusal_qwen_v2.yaml  causal_scrubbing_refusal_stablelm_3b.yaml  circuit_patching.yaml  circuit_patching_factual_recall.yaml  cross_model_representation_probe.yaml  crosscoder.yaml  direct_logit_attribution.yaml  ioi_prompts.jsonl  logit_lens.yaml  polysemanticity.yaml  polysemanticity_sae_gpt2_large.yaml  polysemanticity_sae_gpt2_medium.yaml  polysemanticity_sae_layer6.yaml  polysemanticity_sae_layer6_512.yaml  polysemanticity_sae_layer6_512_scale.yaml  refusal_circuit_gemma2_2b.yaml  (+24 more)
experiments/sweeps/: circuit_patching_layers.yaml  sae_feature_count.yaml  sae_feature_splitting.yaml  sae_seed_stability_layer0.yaml  sae_seed_stability_layer6.yaml  sae_seed_stability_layer6_512.yaml  sae_seed_stability_scale.yaml
getting-started/: index.html
investigations/: index.html  refusal_audit.json
investigations/feature_splitting/: index.html
investigations/gpt2_factual_recall/: index.html
investigations/ioi_canonical_reproduction/: index.html
investigations/refusal_audit/: index.html
investigations/refusal_audit_v2/: index.html
investigations/sae_at_scale/: index.html
investigations/sae_replication_crisis/: index.html
notebooks/: 01_circuit_patching.ipynb  02_polysemanticity_sae.ipynb  03_acdc_lite.ipynb  04_agentic_loop.ipynb  05_research_walkthrough.ipynb  06_sae_replication_crisis.ipynb  07_gpt2_factual_recall_story.ipynb  08_feature_splitting.ipynb  09_refusal_audit.ipynb  10_sae_at_scale.ipynb  index.html
publications/: index.html
publications/abliteration_robustness/: index.html
publications/launch_announcement/: index.html
publications/lesswrong_post/: index.html
publications/sae_replication_artifacts/: index.html  reproduce.sh  scale_control.json
publications/sae_replication_crisis/: index.html
publications/sae_replication_crisis_thread/: index.html
publishing/: index.html
reference/cli/: index.html
reference/cockpit/: index.html
reference/families/: index.html
release-notes/v0.1.0-preview/: index.html
scripts/: check.sh  create_release.sh  demo.sh  extract_helpfulness_direction.py  extract_sentiment_direction.py  gen_audit_yamls.py  generate_social_preview.py  grade_ioi.py  run_multi_model_audit.py  serve_docs.sh  smoke.sh
search/: search_index.json
src/mech_interp/: __init__.py  cli.py  cockpit.py  cockpit_compare.py  cockpit_timeline.py  demo.py  gradio_app.py  types.py
tests/: test_acdc_edge.py  test_activation_capture.py  test_artifacts.py  test_attribution_patching.py  test_backends.py  test_caa_steering.py  test_causal_scrubbing.py  test_check_script.py  test_circuit_metrics.py  test_circuit_patching.py  test_cli.py  test_cli_apply_steering.py  test_cli_compare_runs.py  test_cli_sweep.py  test_cockpit.py  test_cockpit_timeline_compare.py  test_config.py  test_corpus_downloader.py  test_cross_model_representation_probe.py  test_crosscoder.py  test_datasets.py  test_demo.py  test_demo_script.py  test_dependency_groups.py  test_direct_logit_attribution.py  test_docs_build.py  test_experiments.py  test_feature_labeler.py  test_feature_splitting.py  test_gradio_app.py  test_hf_adapter.py  test_hf_publishing.py  test_hf_site_translator.py  test_iterate_loop.py  test_logit_lens.py  test_matrix_preflight_query.py  test_notebooks.py  test_proposal_generators.py  test_proposals.py  test_providers.py  (+20 more)
tests/integration/: conftest.py  test_acdc_edge_e2e.py  test_acdc_edge_ioi_validation.py  test_acdc_lite_e2e.py  test_attribution_patching_e2e.py  test_causal_scrubbing_e2e.py  test_crosscoder_e2e.py  test_demo_e2e.py  test_direct_logit_attribution_e2e.py  test_experiments_e2e.py  test_hf_backend_e2e.py  test_logit_lens_e2e.py  test_mps_smoke.py  test_polysemanticity_sae_e2e.py  test_sae_cross_model_e2e.py  test_sparse_probing_e2e.py
wave-6-integration/: index.html
(+90 files in other folders)
